# bread-feedbacks-telegram-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  readme.md  requirements.txt  run.py
bot/: main.py
bot/core/: database.py  locales.py  logs_event_types.py  system_logger.py
bot/core/configs/: __init__.py  bot_config.py  bot_config_example.py  database_config.py  database_config_example.py  env_config.py  locales_config.py  locales_config_example.py  system_logger_config.py  system_logger_config_example.py
bot/core/models/: __init__.py  base.py  blacklist_user_added.py  blacklist_user_deleted.py  blacklist_users.py  event.py  feedback_created_logs.py  feedback_deleted_logs.py  feedback_updated_logs.py  feedbacks.py  mixins.py
bot/locales/: ru.json  template.json
bot/middlewares/: __init__.py  admin_filter.py  blacklist_filter.py
bot/migrations/: env.py
bot/migrations/versions/: 2ebf6e7b2015_test.py  c3f02eeeee37_create_tables.py  c93060b9058d_create_some_logs_tables.py  de388a114a39_create_events_table.py
bot/routers/: global_buttons.py  global_keyboards.py
bot/routers/admin/: buttons.py  forms.py  router.py
bot/routers/admin/handlers/: add_to_blacklist.py  admin_panel.py  remove_from_blacklist.py  show_blacklist.py
bot/routers/user/: buttons.py  forms.py  keyboards.py  router.py
bot/routers/user/handlers/: cancel.py  menu.py  send_feedback.py  start.py
bot/services/admin/: crud.py
bot/services/event/: crud.py
bot/services/feedback/: crud.py
docs/: dev.md  help.md
