[tool.poetry]
name = "bread-feedbacks-telegram-bot"
version = "0.1.0"
description = "This bot is made for a bread store, the task is to QUICKLY and EASILY leave a review about the product."
authors = ["theaihopgg <theaihopgg@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "bread_feedbacks_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
aiogram = "^3.20.0.post0"
aiosqlite = "^0.21.0"
alembic = "^1.16.1"
python-dotenv = "^1.1.0"
orjson = "^3.10.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
